fixed hourly chart not showing up

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -249,7 +249,6 @@ body {
 
 .buttonContainer {
   position: relative;
-  bottom: 5.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
